# SqueakXRNative

./: .git-s-metadata  .gitignore  .gitmodules  .squot  README.md  clean-squeak-changes.sh  settings.gradle.kts
SqueakXR/: .squot-contents
android/: .gitignore  run-setup.sh
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/swalab/squeakxrnative/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  text-rendering.cpp
android/app/src/main/cpp/squeak/: CMakeLists.txt
android/app/src/main/cpp/squeak/include/: version.c
android/app/src/main/java/com/swalab/squeakxrnative/: MainActivity.kt  ManageImagesActivity.kt  SettingsFragment.kt  Utils.kt  VrActivity.kt
android/app/src/main/res/layout/: activity_main.xml  activity_manage_images.xml  image_layout.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: preferences.xml
android/app/src/test/java/com/swalab/squeakxrnative/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
apiSpecs/: rlOpenXR_api.json  rlgl_api.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/squeak/: CMakeLists.txt
app/src/main/cpp/squeak/include/: config.h  config.h.android
app/src/main/java/com/swalab/squeakxrnative/: MainActivity.kt  SettingsFragment.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: preferences.xml
gradle/: libs.versions.toml
squeak/OpenAL/: AlDefines.class.st  AlFunctions.class.st  STBVorbis.class.st  STBVorbisInfo.class.st  package.st
squeak/OpenXR/: .squot-contents  ExternalType.extension.st  OXRApi.class.st  OXRConstants.class.st  OXRGenerator.class.st  PFN_xrCreateApiLayerInstance.class.st  PFN_xrDebugUtilsMessengerCallbackEXT.class.st  PFN_xrEglGetProcAddressMNDX.class.st  PFN_xrGetInstanceProcAddr.class.st  PFN_xrVoidFunction.class.st  XrAction.class.st  XrActionCreateInfo.class.st  XrActionSet.class.st  XrActionSetCreateInfo.class.st  XrActionSpaceCreateInfo.class.st  XrActionStateBoolean.class.st  XrActionStateFloat.class.st  XrActionStateGetInfo.class.st  XrActionStatePose.class.st  XrActionStateVector2f.class.st  XrActionSuggestedBinding.class.st  XrActionType.class.st  XrActionsSyncInfo.class.st  XrActiveActionSet.class.st  XrActiveActionSetPrioritiesEXT.class.st  XrActiveActionSetPriorityEXT.class.st  XrAndroidSurfaceSwapchainCreateInfoFB.class.st  XrAndroidSurfaceSwapchainFlagBitsFB.class.st  XrAndroidSurfaceSwapchainFlagsFB.class.st  XrAndroidThreadTypeKHR.class.st  XrApiLayerCreateInfo.class.st  XrApiLayerNextInfo.class.st  XrApiLayerProperties.class.st  XrApplicationInfo.class.st  XrAsyncRequestIdFB.class.st  XrBaseInStructure.class.st  XrBaseOutStructure.class.st  XrBindingModificationBaseHeaderKHR.class.st  XrBindingModificationsKHR.class.st  XrBlendFactorFB.class.st  (+742 more)
squeak/OpenXR-Core/: .squot-contents  package.st
squeak/Raylib/: .squot-contents  Color.extension.st  RlAutomationEvent.class.st  RlAutomationEventList.class.st  RlBlendMode.class.st  RlBoneInfo.class.st  RlBoundingBox.class.st  RlCamera2D.class.st  RlCamera3D.class.st  RlCameraMode.class.st  RlCameraProjection.class.st  RlColor.class.st  RlConfigFlags.class.st  RlCubemapLayout.class.st  RlDefines.class.st  RlFFIGenerator.class.st  RlFilePathList.class.st  RlFont.class.st  RlFontType.class.st  RlFunctions.class.st  RlGamepadAxis.class.st  RlGamepadButton.class.st  RlGesture.class.st  RlGlyphInfo.class.st  RlImage.class.st  RlKeyboardKey.class.st  RlMaterial.class.st  RlMaterialMap.class.st  RlMaterialMapIndex.class.st  RlMatrix.class.st  RlMesh.class.st  RlModel.class.st  RlModelAnimation.class.st  RlMouseButton.class.st  RlMouseCursor.class.st  RlNPatchInfo.class.st  RlNPatchLayout.class.st  RlPixelFormat.class.st  RlRLHand.class.st  RlRLOpenXRData.class.st  (+37 more)
squeak/Raylib-Core/: .squot-contents  RlFFIGenerator.class.st  package.st
squeak/SqueakXR/: .squot-contents  Bitmap.extension.st  DialogWindow.extension.st  Form.extension.st  Matrix4x4.extension.st  Morph.extension.st  Number.extension.st  Object.extension.st  Quaternion.extension.st  Rectangle.extension.st  RlVector3Test.class.st  SRAudio.class.st  SRAudioData.class.st  SRAudioPlayer.class.st  SRAudioSnippet.class.st  SRAudioSource.class.st  SRAudioStream.class.st  SRAvatar.class.st  SRBrokenCube.class.st  SRBrokenSphere.class.st  SRButton.class.st  SRCollisionGeometry.class.st  SRCollisionPlane.class.st  SRCollisionSphere.class.st  SRCube.class.st  SRDamageRecorder.class.st  SRDummyMorphPanel.class.st  SRDummyPoolStructure.class.st  SRDummyPooledObject.class.st  SRExtensionTest.class.st  SRFFIGenerator.class.st  SRFrame.class.st  SRFrameTimeGraph.class.st  SRGizmoPainter.class.st  SRHand.class.st  SRHandRayIntersectionResult.class.st  SRList.class.st  SRMaterial.class.st  SRMockObject.class.st  SRMorphPanel.class.st  (+48 more)
